Database and python studio completed

--- a/databases-and-py.ipynb
+++ b/databases-and-py.ipynb
@@ -175,7 +175,7 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "select top 10 from"
             ],
             "metadata": {
                 "azdata_cell_guid": "b871523e-a476-4f3a-a6ac-2e251f140e84"
